add orientation fixes for AVISO currents and similar NetCDFs lacking metadata on the internal CRS
add VRT output to saveStack
Fix lines falling between the cracks in extract (calling rasterzeLines): https://stat.ethz.ch/pipermail/r-sig-geo/2014-May/020973.html
allow setting a 'spatial window'

--- current version
new functions for Raster objects: as.integer, as.list
added 'forcefun' argument to overlay

--- 19-December-2015, version: 2.5-2
Big fixes:
The order of the layers returned by stackApply was only as expected of the indices were sorted from 1 to n. Reported by Mark Payne
rasterize(..., getCover=TRUE) again did not work properly. Reported by Pascal Title
as.vector gave trouble on different version (R-devel vs. R-current). Work around implemented.

--- 10-December-2015, version: 2.4-30
package ncdf is now obsolete and no longer supported (use ncdf4 instead)
Major bug fixes:
Extraction of values with xy or cellnumber from a ncdf file where 'level' is the fourth variable (and time third, in stead of the other way around) did not work correctly. Reported by John Gross
rasterize(..., getCover=TRUE) did not work properly. Reported by Sam Tomlinso
Minor bug fixes:
in rasterFromXYZ (by Gareth Davies)
in crop (by Florian Detsch)
in stack (http://stackoverflow.com/questions/32564932/r-import-two-or-more-selected-bands-from-an-image-stack)
in sampleStratified (by Antoine Stevens)

--- 8-September-2015, version: 2.4-20
Andrei Mirt send a bug fix for corLocal
namespace now captures all functions from other packages
.nchar to replace nchar to avoid R version problem
Sebastian Bock reported a bug in raster:::.circular.weight
various minor fixes

--- 2-July-2015, version: 2.4-15
Improved geodesic algorithm (GeograhicLib by C.F.F. Karney) for pointDistance and other lon/lat distance computations, and to compute the area of an ellipsoidal polygon
significant speed improvement for bilinear resample / projection (by Joe Cheng) 
new functions colSums and rowSums